k8s/apps/cyberchef/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app.kubernetes.io/name: cyberchef
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: ghcr.io/gchq/cyberchef:11.5.0@sha256:fa74354a9c5dd014c8dacee843eb9218fb13465d678d8b049e97bc26a69a1640
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
    - port: 80
      targetPort: 8080
      name: http
